--- a/a/tennki.ipynb
+++ b/a/tennki.ipynb
@@ -13,26 +13,26 @@
     "import schedule\n",
     "import time\n",
     "\n",
-    "def job():\n",
+    "def job():\n",#指定した時間に天気予報の通知が来るように設定
     "  #LINE API必須設定\n",
     "  url = \"https://notify-api.line.me/api/notify\"\n",
-    "  access_token = '4NWyo61Md4UHv56kAXvJlh9MijKC4rUoTJJemMWSS69'#'上で取得したトークンをここに貼り付ける'\n",
+    "  access_token = #'ライン上で取得したトークンをここに貼り付ける'\n",
     "  headers = {'Authorization': 'Bearer ' + access_token}\n",
     "  #アクセスするURL\n",
-    "  url2 = 'https://weather.yahoo.co.jp/weather/jp/6/3520.html'\n",
-    "  #URLにアクセスする 戻り値にはアクセスした結果やHTMLなどが入ったinstanceが帰ってきます\n",
+    "  url2 = 'https://weather.yahoo.co.jp/weather/jp/6/3520.html'\n",#ヤフーの天気予報を参照
+    "  #URLにアクセスする 戻り値にはアクセスした結果やHTMLなどが入ったinstanceがかえる\n",
     "  http = urllib3.PoolManager()\n",
     "  instance = http.request('GET', url2)\n",
-    "  #instanceからHTMLを取り出して、BeautifulSoupで扱えるようにパースします\n",
+    "  #instanceからHTMLを取り出して、BeautifulSoupで扱えるようにする\n",
     "  soup = BeautifulSoup(instance.data, 'html.parser')\n",
-    "  #CSSセレクターで天気のテキストを取得します。\n",
+    "  #CSSセレクターで天気のテキストを取得。\n",
     "  # #今日の天気\n",
     "  tenki_today = soup.select_one('#main > div.forecastCity > table > tr > td > div > p.pict')\n",
     "  #message送信\n",
     "  message = tenki_today.text\n",
     "  payload = {'message': message}\n",
     "  r = requests.post(url, headers=headers, params=payload,)\n",
-    "schedule.every().day.at(\"03:56\").do(job)  \n",
+    "schedule.every().day.at(\"時間いれて\").do(job)  \n",
     "while True:\n",
     "  schedule.run_pending()\n",
     "  time.sleep(60)\n"
