--- a/a/tennki.ipynb
+++ b/a/tennki.ipynb
@@ -13,13 +13,13 @@
     "import schedule\n",
     "import time\n",
     "\n",
-    "def job():\n",#指定した時間に天気予報の通知が来るように設定
+    "def job():#指定した時間に天気予報の通知が来るように設定\n",
     "  #LINE API必須設定\n",
     "  url = \"https://notify-api.line.me/api/notify\"\n",
     "  access_token = #'ライン上で取得したトークンをここに貼り付ける'\n",
     "  headers = {'Authorization': 'Bearer ' + access_token}\n",
     "  #アクセスするURL\n",
-    "  url2 = 'https://weather.yahoo.co.jp/weather/jp/6/3520.html'\n",#ヤフーの天気予報を参照
+    "  url2 = 'https://weather.yahoo.co.jp/weather/jp/6/3520.html'#ヤフーの天気予報を参照\n",
     "  #URLにアクセスする 戻り値にはアクセスした結果やHTMLなどが入ったinstanceがかえる\n",
     "  http = urllib3.PoolManager()\n",
     "  instance = http.request('GET', url2)\n",
